fixed landing and card spacing

--- a/src/components/Home/LandingLeft/LandingLeft.css
+++ b/src/components/Home/LandingLeft/LandingLeft.css
@@ -6,6 +6,7 @@
     margin: 20px 30px 20px 30px;
 
     width: 80%;
+    min-width: 350px;
     max-width: 400px;
     color: #013237;
 }
